--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	<h1>Hello Express.js!</h1>
+	<p>Welcome to my node.js app! First one to deploy on Heroku. Pretty cool.</p>
 </body>
 </html>
